# farm-footprint-explorer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/hooks/: protect-generated-client.sh  protect-migration-files.sh  remind-regenerate-client.sh  remind-review-migration.sh
.claude/skills/add-component/: SKILL.md
.claude/skills/add-endpoint/: SKILL.md
.claude/skills/add-migration/: SKILL.md
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: .env.example  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: CLAUDE.md  env.py
backend/alembic/versions/: 0001_create_spatial_tables.py  0002_add_alert_unique_constraint.py
backend/app/: config.py  db.py  main.py
backend/app/api/routes/: footprint.py
backend/app/models/: footprint.py
backend/app/schemas/: footprint.py
backend/app/services/: alert_ingestion.py  gfw_client.py  land_analysis.py  land_cover_client.py
backend/tests/: conftest.py  test_alert_ingestion.py  test_footprint.py  test_gfw_client.py  test_health.py  test_land_analysis.py  test_land_cover_client.py
docs/: architecture.md
docs/decisions/: 001-tanstack-start-and-maplibre.md  002-postgis-over-flat-files.md  003-gfw-integrated-alerts.md  004-generated-api-client.md
docs/runbooks/: database-migrations.md  local-dev-setup.md  testing-gfw-integration.md
frontend/: CLAUDE.md  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/app/: main.tsx
frontend/app/client/: index.ts  (+2 more)
scripts/: generate-client.sh
(+14 files in other folders)
